Minor edits/tidying in `dom-accessibility-fixer`, `server` TS etc.

--- a/tests/fixtures/example.html
+++ b/tests/fixtures/example.html
@@ -10,6 +10,7 @@
 <a href="https://species.wikimedia.org/wiki/File:Black-headed_Gull_-_St_James_27s_Park_2C_London_-_Nov_2006_edit2.jpg"
   ><img src=
   "https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Black-headed_Gull_-_St_James_27s_Park_2C_London_-_Nov_2006_edit2.jpg/480px-Black-headed_Gull_-_St_James_27s_Park_2C_London_-_Nov_2006_edit2.jpg"
+  crossorigin="anonymous"
 /></a>
 
 <h2> An inaccessible '<tt>button</tt>' </h2>
